v1/staging/message-queue-resource/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bao-rabbitmq-deployment
  namespace: bao-${DEPLOY_ENV}-env
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-service
  template:
    metadata:
      labels:
        app: rabbitmq-service
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq
          resources:
            requests:
              cpu: "0.3"
              memory: "512Mi"
            limits:
              cpu: "0.5"
              memory: "1Gi"
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - status
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - ping
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
      volumes:
        - name: rabbitmq-storage
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
