v1/staging/message-queue-resource/template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bao-rabbitmq-ingress
  namespace: bao-${DEPLOY_ENV}-env
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: "${DOMAIN_NAME}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
